--- a/src/AdminBundle/Resources/views/layout_base.html.twig
+++ b/src/AdminBundle/Resources/views/layout_base.html.twig
@@ -1,7 +1,7 @@
 {% extends "base.html.twig" %}
 
 {% block stylesheets %}
-    {#<link href="{{ asset('back_office/assets/global/plugins/font-awesome/css/font-awesome.min.css') }}" rel="stylesheet" type="text/css" />
+    <link href="{{ asset('back_office/assets/global/plugins/font-awesome/css/font-awesome.min.css') }}" rel="stylesheet" type="text/css" />
     <link href="{{ asset('back_office/assets/global/plugins/simple-line-icons/simple-line-icons.min.css') }}" rel="stylesheet" type="text/css" />
     <link href="{{ asset('back_office/assets/global/plugins/bootstrap/css/bootstrap.min.css') }}" rel="stylesheet" type="text/css" />
     <link href="{{ asset('back_office/assets/global/plugins/bootstrap-switch/css/bootstrap-switch.min.css') }}" rel="stylesheet" type="text/css" />
@@ -19,11 +19,11 @@
     <!-- BEGIN THEME LAYOUT STYLES -->
     <link href="{{ asset('back_office/assets/layouts/layout4/css/layout.min.css') }}" rel="stylesheet" type="text/css" />
     <link href="{{ asset('back_office/assets/layouts/layout4/css/themes/default.min.css') }}" rel="stylesheet" type="text/css" id="style_color" />
-    <link href="{{ asset('back_office/assets/layouts/layout4/css/custom.min.css') }}" rel="stylesheet" type="text/css" />#}
+    <link href="{{ asset('back_office/assets/layouts/layout4/css/custom.min.css') }}" rel="stylesheet" type="text/css" />
 {% endblock %}
 
 {% block javascripts %}
-    {#<!-- END QUICK NAV -->
+    <!-- END QUICK NAV -->
     <!--[if lt IE 9]>
 <script src="../assets/global/plugins/respond.min.js"></script>
 <script src="../assets/global/plugins/excanvas.min.js"></script> 
@@ -89,7 +89,7 @@
                 $('#radio1003').attr('checked', 'checked');
             });
         })
-    </script>#}
+    </script>
 {% endblock %}
 
 {% block classCss %}
