--- a/src/AdminBundle/Resources/views/Layouts/transport/show.html.twig
+++ b/src/AdminBundle/Resources/views/Layouts/transport/show.html.twig
@@ -3,5 +3,9 @@
 {% block title %}Transport{% endblock %}
 
 {% block body %}
-    {{ dump(response) }}
+    <a href="{{ path('transport_add', {'token': token}) }}" title="">Ajouter</a> -- 
+    <a href="{{ path('transport_index', {'token': token}) }}" title="">liste</a>
+    <h1>{{ response.name }}</h1>
+    <hr>
+    {{ response.name|raw }}
 {% endblock %}
