--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% set locale = app.request.locale %}
 <html>
     <head>
         <meta charset="UTF-8" />
@@ -8,6 +9,7 @@
         {% block meta %}{% endblock %}
         <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700&subset=all" rel="stylesheet" type="text/css" />
         {% block stylesheets %}{% endblock %}
+        
         <link rel="shortcut icon" href="{{ asset('favicon.ico') }}" />
     </head>
     <body {% block classCss %}{% endblock %}>
