--- a/src/AdminBundle/Resources/views/Layouts/navigation/sidebar.html.twig
+++ b/src/AdminBundle/Resources/views/Layouts/navigation/sidebar.html.twig
@@ -24,7 +24,7 @@
                         </a>
                     </li>
                     <li class="nav-item start ">
-                        <a href="dashboard_3.html" class="nav-link ">
+                        <a href="{{ path('transport_indexWork', {'token': token}) }}" class="nav-link ">
                             <i class="icon-graph"></i>
                             <span class="title">Catégorie Oeuvre</span>
                             <span class="badge badge-danger">5</span>
