--- a/src/AdminBundle/Resources/views/Layouts/transport/index.html.twig
+++ b/src/AdminBundle/Resources/views/Layouts/transport/index.html.twig
@@ -3,98 +3,6 @@
 {% block title %}Transport{% endblock %}
 
 {% block page_content %}
-    <!-- BEGIN PAGE HEAD-->
-    <div class="page-head">
-        <!-- BEGIN PAGE TITLE -->
-        <div class="page-title">
-            <h1>Admin Dashboard
-                <small>statistics, charts, recent events and reports</small>
-            </h1>
-        </div>
-        <!-- END PAGE TITLE -->
-        <!-- BEGIN PAGE TOOLBAR -->
-        <div class="page-toolbar">
-            <div id="dashboard-report-range" data-display-range="0" class="pull-right tooltips btn btn-fit-height green" data-placement="left" data-original-title="Change dashboard date range">
-                <i class="icon-calendar"></i>&nbsp;
-                <span class="thin uppercase hidden-xs"></span>&nbsp;
-                <i class="fa fa-angle-down"></i>
-            </div>
-            <!-- BEGIN THEME PANEL -->
-            <div class="btn-group btn-theme-panel">
-                <a href="javascript:;" class="btn dropdown-toggle" data-toggle="dropdown">
-                    <i class="icon-settings"></i>
-                </a>
-                <div class="dropdown-menu theme-panel pull-right dropdown-custom hold-on-click">
-                    <div class="row">
-                        <div class="col-md-4 col-sm-4 col-xs-12">
-                            <h3>HEADER</h3>
-                            <ul class="theme-colors">
-                                <li class="theme-color theme-color-default active" data-theme="default">
-                                    <span class="theme-color-view"></span>
-                                    <span class="theme-color-name">Dark Header</span>
-                                </li>
-                                <li class="theme-color theme-color-light " data-theme="light">
-                                    <span class="theme-color-view"></span>
-                                    <span class="theme-color-name">Light Header</span>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="col-md-8 col-sm-8 col-xs-12 seperator">
-                            <h3>LAYOUT</h3>
-                            <ul class="theme-settings">
-                                <li> Layout
-                                    <select class="layout-option form-control input-small input-sm">
-                                        <option value="fluid" selected="selected">Fluid</option>
-                                        <option value="boxed">Boxed</option>
-                                    </select>
-                                </li>
-                                <li> Header
-                                    <select class="page-header-option form-control input-small input-sm">
-                                        <option value="fixed" selected="selected">Fixed</option>
-                                        <option value="default">Default</option>
-                                    </select>
-                                </li>
-                                <li> Top Dropdowns
-                                    <select class="page-header-top-dropdown-style-option form-control input-small input-sm">
-                                        <option value="light">Light</option>
-                                        <option value="dark" selected="selected">Dark</option>
-                                    </select>
-                                </li>
-                                <li> Sidebar Mode
-                                    <select class="sidebar-option form-control input-small input-sm">
-                                        <option value="fixed">Fixed</option>
-                                        <option value="default" selected="selected">Default</option>
-                                    </select>
-                                </li>
-                                <li> Sidebar Menu
-                                    <select class="sidebar-menu-option form-control input-small input-sm">
-                                        <option value="accordion" selected="selected">Accordion</option>
-                                        <option value="hover">Hover</option>
-                                    </select>
-                                </li>
-                                <li> Sidebar Position
-                                    <select class="sidebar-pos-option form-control input-small input-sm">
-                                        <option value="left" selected="selected">Left</option>
-                                        <option value="right">Right</option>
-                                    </select>
-                                </li>
-                                <li> Footer
-                                    <select class="page-footer-option form-control input-small input-sm">
-                                        <option value="fixed">Fixed</option>
-                                        <option value="default" selected="selected">Default</option>
-                                    </select>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- END THEME PANEL -->
-        </div>
-        <!-- END PAGE TOOLBAR -->
-    </div>
-    <!-- END PAGE HEAD-->
-    <!-- BEGIN PAGE BREADCRUMB -->
     <ul class="page-breadcrumb breadcrumb">
         <li>
             <a href="index.html">Home</a>
@@ -104,23 +12,108 @@
             <span class="active">Dashboard</span>
         </li>
     </ul>
-    <a href="{{ path('transport_add', {'token': token}) }}" title="">Ajouter</a>
-    <table>
-        <tr>
-            <th>Libellé</th>
-            <th>detail</th>
-            <th>Actions</th>
-        </tr>
-        {% for data in datas %}
-            <tr>
-                <td>{{ data.name }}</td>
-                <td>{{ data.detail }}</td>
-                <td>
-                    <a href="{{ path('transport_show', {'token': token, 'id': data.id}) }}" title="{{ data.name }}">Afficher</a>
-                    <a href="{{ path('transport_edit', {'token': token, 'id': data.id}) }}" title="{{ data.name }}">Modifier</a>
-                </td>
-            </tr>
-        {% endfor %}
-    </table>
+    
+    <div class="row">
+        <div class="col-md-12">
+            <!-- BEGIN EXAMPLE TABLE PORTLET-->
+            <div class="portlet light bordered">
+                <div class="portlet-title">
+                    <div class="caption font-dark">
+                        <i class="icon-settings font-dark"></i>
+                        <span class="caption-subject bold uppercase"> Managed Table</span>
+                    </div>
+                    <div class="actions">
+                        <div class="btn-group btn-group-devided" data-toggle="buttons">
+                            <label class="btn btn-transparent dark btn-outline btn-circle btn-sm active">
+                                <input type="radio" name="options" class="toggle" id="option1">Actions</label>
+                            <label class="btn btn-transparent dark btn-outline btn-circle btn-sm">
+                                <input type="radio" name="options" class="toggle" id="option2">Settings</label>
+                        </div>
+                    </div>
+                </div>
+                <div class="portlet-body">
+                    <div class="table-toolbar">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="btn-group">
+                                    <a href="{{ path('transport_add', {'token': token}) }}" class="btn sbold green" title="">
+                                        Ajouter <i class="fa fa-plus"></i>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="btn-group pull-right">
+                                    <button class="btn green  btn-outline dropdown-toggle" data-toggle="dropdown">Tools
+                                        <i class="fa fa-angle-down"></i>
+                                    </button>
+                                    <ul class="dropdown-menu pull-right">
+                                        <li>
+                                            <a href="javascript:;">
+                                                <i class="fa fa-print"></i> Print </a>
+                                        </li>
+                                        <li>
+                                            <a href="javascript:;">
+                                                <i class="fa fa-file-pdf-o"></i> Save as PDF </a>
+                                        </li>
+                                        <li>
+                                            <a href="javascript:;">
+                                                <i class="fa fa-file-excel-o"></i> Export to Excel </a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <table class="table table-striped table-bordered table-hover table-checkable order-column" id="sample_1">
+                        <thead>
+                            <tr>
+                                <th>
+                                    <label class="mt-checkbox mt-checkbox-single mt-checkbox-outline">
+                                        <input type="checkbox" class="group-checkable" data-set="#sample_1 .checkboxes" />
+                                        <span></span>
+                                    </label>
+                                </th>
+                                <th> Libellé </th>
+                                <th> detail </th>
+                                <th> Actions </th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for data in datas %}
+                            <tr class="odd gradeX">
+                                <td>
+                                    <label class="mt-checkbox mt-checkbox-single mt-checkbox-outline">
+                                        <input type="checkbox" class="checkboxes" value="1" />
+                                        <span></span>
+                                    </label>
+                                </td>
+                                <td> {{ data.name }} </td>
+                                <td>
+                                    {{ data.detail }}
+                                </td>
+                                <td>
+                                    <div class="btn-group">
+                                        <button class="btn btn-xs green dropdown-toggle" type="button" data-toggle="dropdown" aria-expanded="false"> Actions
+                                            <i class="fa fa-angle-down"></i>
+                                        </button>
+                                        <ul class="dropdown-menu pull-left" role="menu">
+                                            <li>
+                                                <a href="{{ path('transport_show', {'token': token, 'id': data.id}) }}" title="{{ data.name }}">Afficher</a>
+                                            </li>
+                                            <li>
+                                                <a href="{{ path('transport_edit', {'token': token, 'id': data.id}) }}" title="{{ data.name }}">Modifier</a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </td>
+                            </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+            <!-- END EXAMPLE TABLE PORTLET-->
+        </div>
+    </div>
 
 {% endblock %}
