--- a/src/AdminBundle/Resources/views/layout_base.html.twig
+++ b/src/AdminBundle/Resources/views/layout_base.html.twig
@@ -6,6 +6,9 @@
         '@AdminBundle/Resources/public/assets/global/plugins/simple-line-icons/simple-line-icons.min.css'
         '@AdminBundle/Resources/public/assets/global/plugins/bootstrap/css/bootstrap.min.css'
         '@AdminBundle/Resources/public/assets/global/plugins/bootstrap-switch/css/bootstrap-switch.min.css'
+        
+        '@AdminBundle/Resources/public/assets/global/plugins/datatables/datatables.min.css'
+        '@AdminBundle/Resources/public/assets/global/plugins/datatables/plugins/bootstrap/datatables.bootstrap.css'
 
         '@AdminBundle/Resources/public/assets/global/plugins/bootstrap-daterangepicker/daterangepicker.min.css'
         '@AdminBundle/Resources/public/assets/global/plugins/morris/morris.css'
@@ -39,6 +42,10 @@
         '@AdminBundle/Resources/public/assets/global/plugins/jquery-slimscroll/jquery.slimscroll.min.js'
         '@AdminBundle/Resources/public/assets/global/plugins/jquery.blockui.min.js'
         '@AdminBundle/Resources/public/assets/global/plugins/bootstrap-switch/js/bootstrap-switch.min.js'
+
+        '@AdminBundle/Resources/public/assets/global/scripts/datatable.js'
+        '@AdminBundle/Resources/public/assets/global/plugins/datatables/datatables.min.js'
+        '@AdminBundle/Resources/public/assets/global/plugins/datatables/plugins/bootstrap/datatables.bootstrap.js'
 
         '@AdminBundle/Resources/public/assets/global/plugins/moment.min.js'
         '@AdminBundle/Resources/public/assets/global/plugins/bootstrap-daterangepicker/daterangepicker.min.js'
@@ -112,15 +119,107 @@
         <div class="page-content-wrapper">
             <!-- BEGIN CONTENT BODY -->
             <div class="page-content">
+                <!-- BEGIN PAGE HEAD-->
+                <div class="page-head">
+                    <!-- BEGIN PAGE TITLE -->
+                    <div class="page-title">
+                        <h1>Admin Dashboard
+                            <small>statistics, charts, recent events and reports</small>
+                        </h1>
+                    </div>
+                    <!-- END PAGE TITLE -->
+                    <!-- BEGIN PAGE TOOLBAR -->
+                    <div class="page-toolbar">
+                        <div id="dashboard-report-range" data-display-range="0" class="pull-right tooltips btn btn-fit-height green" data-placement="left" data-original-title="Change dashboard date range">
+                            <i class="icon-calendar"></i>&nbsp;
+                            <span class="thin uppercase hidden-xs"></span>&nbsp;
+                            <i class="fa fa-angle-down"></i>
+                        </div>
+                        <!-- BEGIN THEME PANEL -->
+                        <div class="btn-group btn-theme-panel">
+                            <a href="javascript:;" class="btn dropdown-toggle" data-toggle="dropdown">
+                                <i class="icon-settings"></i>
+                            </a>
+                            <div class="dropdown-menu theme-panel pull-right dropdown-custom hold-on-click">
+                                <div class="row">
+                                    <div class="col-md-4 col-sm-4 col-xs-12">
+                                        <h3>HEADER</h3>
+                                        <ul class="theme-colors">
+                                            <li class="theme-color theme-color-default active" data-theme="default">
+                                                <span class="theme-color-view"></span>
+                                                <span class="theme-color-name">Dark Header</span>
+                                            </li>
+                                            <li class="theme-color theme-color-light " data-theme="light">
+                                                <span class="theme-color-view"></span>
+                                                <span class="theme-color-name">Light Header</span>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                    <div class="col-md-8 col-sm-8 col-xs-12 seperator">
+                                        <h3>LAYOUT</h3>
+                                        <ul class="theme-settings">
+                                            <li> Layout
+                                                <select class="layout-option form-control input-small input-sm">
+                                                    <option value="fluid" selected="selected">Fluid</option>
+                                                    <option value="boxed">Boxed</option>
+                                                </select>
+                                            </li>
+                                            <li> Header
+                                                <select class="page-header-option form-control input-small input-sm">
+                                                    <option value="fixed" selected="selected">Fixed</option>
+                                                    <option value="default">Default</option>
+                                                </select>
+                                            </li>
+                                            <li> Top Dropdowns
+                                                <select class="page-header-top-dropdown-style-option form-control input-small input-sm">
+                                                    <option value="light">Light</option>
+                                                    <option value="dark" selected="selected">Dark</option>
+                                                </select>
+                                            </li>
+                                            <li> Sidebar Mode
+                                                <select class="sidebar-option form-control input-small input-sm">
+                                                    <option value="fixed">Fixed</option>
+                                                    <option value="default" selected="selected">Default</option>
+                                                </select>
+                                            </li>
+                                            <li> Sidebar Menu
+                                                <select class="sidebar-menu-option form-control input-small input-sm">
+                                                    <option value="accordion" selected="selected">Accordion</option>
+                                                    <option value="hover">Hover</option>
+                                                </select>
+                                            </li>
+                                            <li> Sidebar Position
+                                                <select class="sidebar-pos-option form-control input-small input-sm">
+                                                    <option value="left" selected="selected">Left</option>
+                                                    <option value="right">Right</option>
+                                                </select>
+                                            </li>
+                                            <li> Footer
+                                                <select class="page-footer-option form-control input-small input-sm">
+                                                    <option value="fixed">Fixed</option>
+                                                    <option value="default" selected="selected">Default</option>
+                                                </select>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- END THEME PANEL -->
+                    </div>
+                    <!-- END PAGE TOOLBAR -->
+                </div>
+                <!-- END PAGE HEAD-->
             {% block page_content %}{% endblock %}
         </div>
-        <!-- END CONTENT BODY -->
     </div>
-    <!-- END CONTENT -->
-    <!-- BEGIN QUICK SIDEBAR -->
-    <a href="javascript:;" class="page-quick-sidebar-toggler">
-        <i class="icon-login"></i>
-    </a>
+    <!-- END CONTENT BODY -->
+</div>
+<!-- END CONTENT -->
+<!-- BEGIN QUICK SIDEBAR -->
+<a href="javascript:;" class="page-quick-sidebar-toggler">
+    <i class="icon-login"></i>
+</a>
 </div>
 <!-- END CONTAINER -->
 {% include '@Admin/Layouts/navigation/footer.html.twig' %}
