Ajout des fonctionnalités

--- a/src/AdminBundle/Resources/views/Layouts/categories/indexWork.html.twig
+++ b/src/AdminBundle/Resources/views/Layouts/categories/indexWork.html.twig
@@ -37,7 +37,7 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="btn-group">
-                                    <a href="{{ path('transport_add', {'token': token}) }}" class="btn sbold green" title="">
+                                    <a href="{{ path('work_new', {'token': token}) }}" class="btn sbold green" title="">
                                         Ajouter <i class="fa fa-plus"></i>
                                     </a>
                                 </div>
