--- a/src/AdminBundle/Resources/views/Layouts/navigation/sidebar.html.twig
+++ b/src/AdminBundle/Resources/views/Layouts/navigation/sidebar.html.twig
@@ -10,13 +10,13 @@
                 </a>
                 <ul class="sub-menu">
                     <li class="nav-item start ">
-                        <a href="index.html" class="nav-link ">
+                        <a href="#" class="nav-link ">
                             <i class="icon-bar-chart"></i>
                             <span class="title">Oeuvres</span>
                         </a>
                     </li>
                     <li class="nav-item start active open">
-                        <a href="dashboard_2.html" class="nav-link ">
+                        <a href="#" class="nav-link ">
                             <i class="icon-bulb"></i>
                             <span class="title">Galeries</span>
                             <span class="selected"></span>
@@ -24,21 +24,21 @@
                         </a>
                     </li>
                     <li class="nav-item start ">
-                        <a href="{{ path('transport_indexWork', {'token': token}) }}" class="nav-link ">
+                        <a href="{{ path('categorie_work_index', {'token': token}) }}" class="nav-link ">
                             <i class="icon-graph"></i>
                             <span class="title">Catégorie Oeuvre</span>
                             <span class="badge badge-danger">5</span>
                         </a>
                     </li>
                     <li class="nav-item start ">
-                        <a href="dashboard_3.html" class="nav-link ">
+                        <a href="#" class="nav-link ">
                             <i class="icon-graph"></i>
                             <span class="title">Catégorie Galerie</span>
                             <span class="badge badge-danger">5</span>
                         </a>
                     </li>
                     <li class="nav-item start ">
-                        <a href="dashboard_3.html" class="nav-link ">
+                        <a href="#" class="nav-link ">
                             <i class="icon-graph"></i>
                             <span class="title">Utilisateur</span>
                             <span class="badge badge-danger">5</span>
